# ai_resume

./: package-lock.json
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4_personal.ipynb  README.md  ai_resume_app.py  gradio_start.ipynb
1_foundations/.gradio/flagged/: dataset1.csv
1_foundations/me/: summary.txt
2_openai/: 1_lab1_personal.ipynb  2_lab2_personal.ipynb  4_lab4_personal.ipynb
2_openai/deep_research/: deep_research_singletextbox.py
2_openai/deep_research_personal/: README.md  deep_research_chat.py  email_agent.py  followup_questions.py  planner_agent.py  requirements.txt  research_manager.py  search_agent.py  writer_agent.py
3_crew/coder_personal/: README.md  pyproject.toml
3_crew/coder_personal/output/: code_and_output.txt
3_crew/coder_personal/src/coder_personal/: crew.py  main.py
3_crew/coder_personal/src/coder_personal/config/: agents.yaml  tasks.yaml
3_crew/debate_personal/: README.md  decide.md  oppose.md  propose.md  pyproject.toml
3_crew/debate_personal/src/debate_personal/: crew.py  main.py
3_crew/debate_personal/src/debate_personal/config/: agents.yaml  tasks.yaml
3_crew/engineering_team_personal/: README.md  cricket_news.db  fantasy_cricket.db  pyproject.toml
3_crew/engineering_team_personal/output/: REVIEW_DESIGN.md  REVIEW_FEATURES.md  REVIEW_REQUIREMENTS.md  accounts.py  app.py  business_requirements.md  fantasy_cricket.db  feedback_implementation.md  integrated_demo.py  integration_report.md  models.py  quality_validation.md  review_summary.md  technical_design.md  test_accounts.py
3_crew/engineering_team_personal/src/engineering_team_personal/: crew.py  main.py
3_crew/engineering_team_personal/src/engineering_team_personal/config/: agents.yaml  tasks.yaml
3_crew/financial_researcher_personal/: README.md  pyproject.toml
3_crew/financial_researcher_personal/output/: report.md
3_crew/financial_researcher_personal/src/financial_researcher_personal/: crew.py  main.py
3_crew/financial_researcher_personal/src/financial_researcher_personal/config/: agents.yaml  tasks.yaml
3_crew/stock_picker_personal/: README.md  pyproject.toml
3_crew/stock_picker_personal/memory/: chroma.sqlite3  long_term_memory.db
3_crew/stock_picker_personal/output/: decision.md  research_report.json  trending_companies.json
3_crew/stock_picker_personal/src/stock_picker_personal/: crew.py  main.py
3_crew/stock_picker_personal/src/stock_picker_personal/config/: agents.yaml  tasks.yaml
3_crew/stock_picker_personal/src/stock_picker_personal/tools/: push_tool.py
4_langgraph/: 1_lab1_personal.ipynb  2_lab2_personal.ipynb  3_lab3_personal.ipynb  4_lab4_personal.ipynb
4_langgraph/sidekick_project/: sidekick_personal.py  sidekick_tools_personal.py
4_langgraph/sidekick_project - Advanced/: app.py  backend.py  package-lock.json  package.json  requirements.txt  sidekick_personal.py  vite.config.js
4_langgraph/sidekick_project - Advanced/frontend/: index.html  package-lock.json  package.json  vite.config.js
4_langgraph/sidekick_project - Advanced/frontend/src/: App.jsx  index.css
4_langgraph/sidekick_project - Advanced/src/: ChatApp.jsx
