[project]
name = "debate_personal"
version = "0.1.0"
description = "debate_personal using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
debate_personal = "debate_personal.main:run"
run_crew = "debate_personal.main:run"
train = "debate_personal.main:train"
replay = "debate_personal.main:replay"
test = "debate_personal.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
