[project]
name = "engineering_team_personal"
version = "0.1.0"
description = "engineering_team_personal using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0",
    "gradio>=5.33.0",
]

[project.scripts]
engineering_team_personal = "engineering_team_personal.main:run"
run_crew = "engineering_team_personal.main:run"
train = "engineering_team_personal.main:train"
replay = "engineering_team_personal.main:replay"
test = "engineering_team_personal.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
