[project]
name = "financial_researcher_personal"
version = "0.1.0"
description = "financial_researcher_personal using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
financial_researcher_personal = "financial_researcher_personal.main:run"
run_crew = "financial_researcher_personal.main:run"
train = "financial_researcher_personal.main:train"
replay = "financial_researcher_personal.main:replay"
test = "financial_researcher_personal.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
